--- a/sima-rent-a-car/src/static/css/forms.css
+++ b/sima-rent-a-car/src/static/css/forms.css
@@ -64,4 +64,5 @@ input:focus {
 
 .error-msg {
     min-height: 24px;
+    color: rgb(var(--clr-error));
 }
