--- a/sima-rent-a-car/src/static/css/profile.css
+++ b/sima-rent-a-car/src/static/css/profile.css
@@ -210,10 +210,11 @@
     width: 100%;
     padding-bottom: 1.5rem;
     overflow-y: hidden;
+    min-height: 80px;
 }
 
 .tabs-overflow::-webkit-scrollbar {
-    height: 0.5em;
+    height: 0.35em;
 }
 
 .tabs-overflow::-webkit-scrollbar-track {
@@ -240,6 +241,7 @@
     padding: 1.5rem;
     padding-bottom: 0rem;
     width: 100%;
+    gap: 0.5rem;
     overflow: auto;
 }
 
